# ozon-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: data.rs  main.rs  prelude.rs
src/task/: api.rs  mod.rs  types.rs  utils.rs
