[package]
name = "ozon-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "*", features = ["full"] }
anyhow = "*"
futures-util = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
csv = "*"
regex = "*"
lazy_static = "*"

tracing = { version = "*", features = ["attributes"] }
tracing-subscriber = { version = "*", features = ["env-filter", "json"] }
tracing-appender = { version = "*" }

rquest = { version = "*", features = [
    "json",
    "cookies",
    "gzip",
    "brotli",
    "zstd",
] }
